# sdk-tools

./: CMakeLists.txt  README.md  README.md.bak  build.sh
aarch64/: aapt  aidl  aidl-cpp  zipalign
android-8.1/: README.md
cmake/: CMakeLists.txt
cmake/aapt/: CMakeLists.txt
cmake/aapt2/: CMakeLists.txt
cmake/aidl/: CMakeLists.txt
cmake/dexdump/: CMakeLists.txt
cmake/lib/: CMakeLists.txt
cmake/lib/androidfw/: CMakeLists.txt
cmake/lib/compiler-rt/: CMakeLists.txt
cmake/lib/expat/: CMakeLists.txt
cmake/lib/libartbase/: CMakeLists.txt
cmake/lib/libartpalette/: CMakeLists.txt
cmake/lib/libbase/: CMakeLists.txt
cmake/lib/libbuildversion/: CMakeLists.txt
cmake/lib/libcpu_features/: CMakeLists.txt
cmake/lib/libcutils/: CMakeLists.txt
cmake/lib/libcxx/: CMakeLists.txt
cmake/lib/libcxxabi/: CMakeLists.txt
cmake/lib/libdexfile/: CMakeLists.txt
cmake/lib/libjsoncpp/: CMakeLists.txt
cmake/lib/liblog/: CMakeLists.txt
cmake/lib/libpng/: CMakeLists.txt
cmake/lib/libprocessgroup/: CMakeLists.txt
cmake/lib/libutils/: CMakeLists.txt
cmake/lib/libvndksupport/: CMakeLists.txt
cmake/lib/libziparchive/: CMakeLists.txt
cmake/lib/libzopfli/: CMakeLists.txt
cmake/lib/protobuf/: CMakeLists.txt
cmake/lib/zlib/: CMakeLists.txt
cmake/modules/: Android.cmake
cmake/platform-tools/: CMakeLists.txt
cmake/platform-tools/adb/: CMakeLists.txt
cmake/platform-tools/adb/deployagent/: CMakeLists.txt
cmake/platform-tools/adb/libadb_crypto/: CMakeLists.txt
cmake/platform-tools/adb/libadb_pairing_auth/: CMakeLists.txt
cmake/platform-tools/adb/libadb_pairing_connection/: CMakeLists.txt
cmake/platform-tools/adb/libadb_protos/: CMakeLists.txt
cmake/platform-tools/adb/libadb_sysdeps/: CMakeLists.txt
cmake/platform-tools/adb/libadb_tls_connection/: CMakeLists.txt
cmake/platform-tools/adb/libfastdeploy_host/: CMakeLists.txt
cmake/platform-tools/e2fsprogs/e2fsdroid/: CMakeLists.txt
cmake/platform-tools/e2fsprogs/mke2fs/: CMakeLists.txt
cmake/platform-tools/etc1tool/: CMakeLists.txt
cmake/platform-tools/f2fs-tools/: CMakeLists.txt
cmake/platform-tools/fastboot/: CMakeLists.txt
cmake/platform-tools/lib/: CMakeLists.txt
cmake/platform-tools/lib/boringssl/: CMakeLists_link_err.txt  build.sh
cmake/platform-tools/lib/libcrypto_utils/: CMakeLists.txt
cmake/platform-tools/lib/libselinux/: CMakeLists.txt
cmake/platform-tools/lib/libsepol/: CMakeLists.txt
cmake/platform-tools/lib/libusb/: CMakeLists.txt
cmake/platform-tools/sqlite3/: CMakeLists.txt
cmake/platform-tools/sqlite3/libandroidicu/: CMakeLists.txt
cmake/platform-tools/sqlite3/libicui18n/: CMakeLists.txt
cmake/platform-tools/sqlite3/libicuuc/: CMakeLists.txt
cmake/platform-tools/sqlite3/libicuuc_stubdata/: CMakeLists.txt
cmake/split-select/: CMakeLists.txt
cmake/zipalign/: CMakeLists.txt
patch/: adb.cpp.patch  aidl_language_l.ll.patch  avb_sysdeps.h.patch  cgrouprc.h.patch  dex_file.cc.patch  fastboot.cpp.patch  instruction_set.h.patch  mem_map.cc.patch  pairing_auth.h.patch  pairing_connection.h.patch  uconfig_local.h.patch  utypes.h.patch
script/aapt/: CMakeLists.txt
script/aapt2/: CMakeLists.txt
script/aapt2_jni/: CMakeLists.txt
script/aapt2_static/: CMakeLists.txt
script/aapt_static/: CMakeLists.txt
script/aidl/: CMakeLists.txt
script/aidl-common/: CMakeLists.txt
script/aidl-cpp/: CMakeLists.txt
script/androidfw/: CMakeLists.txt
script/base/: CMakeLists.txt
script/compiler-rt/: CMakeLists.txt
script/expat/: CMakeLists.txt
script/libcutils/: CMakeLists.txt
script/libcxx/: CMakeLists.txt
script/libcxxabi/: CMakeLists.txt
script/liblog/: CMakeLists.txt
script/libpng/: CMakeLists.txt
script/libutils/: CMakeLists.txt
script/libziparchive/: CMakeLists.txt
script/libzopfli/: CMakeLists.txt
script/protobuf/aprotoc/: CMakeLists.txt
script/protobuf/libprotobuf-cpp-lite/: CMakeLists.txt
script/zipalign/: CMakeLists.txt
script/zlib/: CMakeLists.txt
