cmake_minimum_required(VERSION 3.4.1)

project(lib)

add_subdirectory(libcxx)
add_subdirectory(libcxxabi)
add_subdirectory(zlib)
add_subdirectory(expat)
add_subdirectory(libzopfli)
add_subdirectory(libjsoncpp)
add_subdirectory(liblog)
add_subdirectory(libpng)
add_subdirectory(libutils)
add_subdirectory(libcutils)
add_subdirectory(libbase)
add_subdirectory(libziparchive)
add_subdirectory(libvndksupport)
add_subdirectory(libprocessgroup)
add_subdirectory(libbuildversion)
add_subdirectory(androidfw)
add_subdirectory(compiler-rt)
add_subdirectory(protobuf)
